placeholder plugin changes reverted

--- a/agile-frontend/WebContent/flatfull/css/material-theme/css/agile-theme.css
+++ b/agile-frontend/WebContent/flatfull/css/material-theme/css/agile-theme.css
@@ -3337,10 +3337,10 @@ i.mce-ico, i.mce-caret, span.mce-txt{
   background-color: #f4f8f9 !important;
   border-radius: 5px !important;
 }
-.agile-theme-15 .mce-edit-area label{
+/*.agile-theme-15 .mce-edit-area label{
   color: rgba(136, 136, 136, 0.39) !important;
   left: 10px !important;
-} 
+}*/ 
 
   /*Tinymce Editor New Theme CSS End*/
 
