--- a/agile-frontend/WebContent/flatfull/css/material-theme/css/agile-theme.css
+++ b/agile-frontend/WebContent/flatfull/css/material-theme/css/agile-theme.css
@@ -3453,7 +3453,7 @@ i.mce-ico, i.mce-caret, span.mce-txt{
     color: #1e347b!important;
     margin: 0px !important;
     line-height: 16px; 
-    font-size: 14px!important;
+    font-size: 13!important;
     padding: 0px !important;
     background-color: #fff!important;
 }
@@ -3714,4 +3714,13 @@ color: #78909c!important;
   height: 30px !important;
   line-height: 30px !important;
   font-size: 13px !important;
+}
+#api_track_webrules_code.prettyprint.linenums, #api_track_code.prettyprint.linenums
+{
+  font-size:13px!important;
+}
+.grp-clipboard-webrule-whitelist-code,.grp-clipboard-track-code
+{
+  padding:5px 15px 5px 15px!important;
+  font-size:13px!important;
 }
