--- a/agile-frontend/WebContent/flatfull/css/material-theme/css/agile-theme.css
+++ b/agile-frontend/WebContent/flatfull/css/material-theme/css/agile-theme.css
@@ -3724,3 +3724,10 @@ color: #78909c!important;
   padding:5px 15px 5px 15px!important;
   font-size:13px!important;
 }
+.reports-Container #group_names
+{
+  padding-bottom:0px;
+  padding-left:20px;
+  padding-right:48px;
+  padding-top:0px;
+}
