--- a/agile-frontend/WebContent/flatfull/css/material-theme/css/agile-theme.css
+++ b/agile-frontend/WebContent/flatfull/css/material-theme/css/agile-theme.css
@@ -3710,6 +3710,7 @@ color: #78909c!important;
   border-radius: 5px;
 }
 
+
 .btn-mlg-imp{
   height: 30px !important;
   line-height: 30px !important;
@@ -3731,3 +3732,28 @@ color: #78909c!important;
   padding-right:48px;
   padding-top:0px;
 }
+
+ #new-ticket  .chosen-choices  .search-choice{
+    border: none;
+    box-shadow: none;
+    background-color: #d2e4e8 !important;
+    /* box-shadow: 0 2px 30px rgba(0, 0, 0, 0.05); */
+    border-radius: 3px !important;
+ }
+
+ #new-ticket .chosen-container-multi .chosen-choices .search-choice{
+  padding: 3px 25px 3px 5px !important;
+ }
+ #new-ticket .chosen-choices  .search-choice span{
+  padding-left: 4px !important;
+ }
+ #new-ticket .chosen-container-multi .chosen-choices .search-choice .search-choice-close{
+  right: 8px !important;
+ }
+ #new-ticket  div.chosen-container>ul.chosen-choices>li{
+      margin: 10px 3px !important;
+ }
+ #new-ticket  div.chosen-container>ul.chosen-choices>li.search-field{
+  margin-top: 7px !important;
+ }
+
