--- a/agile-frontend/WebContent/flatfull/css/material-theme/css/agile-theme.css
+++ b/agile-frontend/WebContent/flatfull/css/material-theme/css/agile-theme.css
@@ -3723,7 +3723,7 @@ color: #78909c!important;
 {
   font-size:13px!important;
 }
-.grp-clipboard-webrule-whitelist-code,.grp-clipboard-track-code
+.grp-clipboard-webrule-whitelist-code,.grp-clipboard-track-code,.grp-clipboard-webrule-code
 {
   padding:5px 15px 5px 15px!important;
   font-size:13px!important;
