--- a/agile-frontend/WebContent/flatfull/css/material-theme/css/agile-theme.css
+++ b/agile-frontend/WebContent/flatfull/css/material-theme/css/agile-theme.css
@@ -3341,7 +3341,7 @@ i.mce-ico, i.mce-caret, span.mce-txt{
   color: rgba(136, 136, 136, 0.39) !important;
   left: 10px !important;
 }*/ 
-.agile-theme-15 .mce-menu-item span.mce-txt{
+.agile-theme-15 .mce-menu-item span.mce-text{
   background-color: inherit !important;
 }
 .agile-theme-15 .mce-abs-layout .mce-widget.mce-primary.mce-abs-layout-item.mce-first.mce-btn-has-text.mce-btn{
