added the fix for the add icon

--- a/agile-frontend/WebContent/flatfull/css/material-theme/css/agile-theme.css
+++ b/agile-frontend/WebContent/flatfull/css/material-theme/css/agile-theme.css
@@ -3773,4 +3773,10 @@ text-align: right;
 }
 th.category-buttons-left.header:after
 {
- display:none;}
+ display:none;
+}
+.select-landing-page-button.btn-addon i 
+{
+  float:left;
+  margin-top:-3px !important;
+}
