added the changes for buttons

--- a/agile-frontend/WebContent/flatfull/css/material-theme/css/agile-theme.css
+++ b/agile-frontend/WebContent/flatfull/css/material-theme/css/agile-theme.css
@@ -3879,3 +3879,8 @@ margin-top:0px;
 .ticket-new-theme-article i:before{
      margin-right: 0px!important;
 }
+.add-section-new-theme span,
+{
+  vertical-align: top;
+}
+.ticket-new-theme-
