added the spacing for the categories list item

--- a/agile-frontend/WebContent/flatfull/css/material-theme/css/agile-theme.css
+++ b/agile-frontend/WebContent/flatfull/css/material-theme/css/agile-theme.css
@@ -3598,7 +3598,7 @@ i.mce-ico, i.mce-caret, span.mce-txt{
 {
   background-color:#F4F8F9!important;
 }
-#helpcenter-content .theme-panel .panel-footer
+#helpcenter-content .theme-panel .panel-footer , #helpcenter-content .newthemepanel .panel-footer
 {
       background-color: #F4F8F9;
 }
