--- a/agile-frontend/WebContent/misc/pagebuilder/source/elements/css/newtemplate.css
+++ b/agile-frontend/WebContent/misc/pagebuilder/source/elements/css/newtemplate.css
@@ -5,7 +5,7 @@
     padding: 0px 10px 0px 0px;
 }
 .newtemp1 {
-    background-color: #8cddcd;
+    background-color: #f9f9f9;
 }
 .newtemp1 .intro {
     padding: 0px 10px 0px 0px;
@@ -49,7 +49,7 @@ figure {
     margin-top: 15px;
 }
 .newtemp3    {
-    background-color: #8cddcd;
+    background-color: #f9f9f9;;
     color: #444;
     padding-top: 100px;
     padding-bottom: 0px;
