--- a/agile-frontend/WebContent/flatfull/css/core/1-agilecrm.css
+++ b/agile-frontend/WebContent/flatfull/css/core/1-agilecrm.css
@@ -5616,3 +5616,162 @@ div#need_help_header a:hover {
 .dashboard-select .dropdown-menu .grid2-sub-nav span:hover {
     color: #337ab7;
 }
+
+.new-theme-add-modals .modal-cotent.ticket-modal-content,.new-theme-add-modals .modal-content{
+  border-radius: 5px;
+}
+
+ #new-ticket .chosen-container-multi .chosen-choices .search-choice{
+  padding: 3px 25px 3px 5px !important;
+ }
+ #new-ticket .chosen-choices  .search-choice span{
+  padding-left: 4px !important;
+ }
+ #new-ticket .chosen-container-multi .chosen-choices .search-choice .search-choice-close{
+  right: 8px !important;
+ }
+
+ .btn-mlg-imp{
+  height: 35px !important;
+  line-height: 35px !important;
+  font-size: 13px !important;
+  padding: 0 3em !important;
+ }
+
+ .new-theme-add-modals .form-horizontal .form-group{
+  margin-left: 0px !important;
+  margin-right: 0px !important
+ }
+
+.new-theme-add-modals  .event-modal-send-invitation{
+  width: 100% !important;
+  margin-left: 0% !important;
+  padding-left: 0px !important;
+}
+.new-theme-add-modals .modal-description{
+ padding-bottom: 0px !important;
+ margin-bottom: 0px !important;
+}
+.new-theme-add-modals .modal-calendar-icon{
+    float: right;
+    margin-right: 6px;
+    margin-top: -27px;
+    position: relative;
+    z-index: 2;
+}
+.new-theme-add-modals .modal-search-icon{
+  float: left;
+  margin-left: 10px;
+  position: relative; 
+  margin-top: -27px;
+}
+.new-theme-add-modals #event_related_to.form-control,.new-theme-add-modals #event_relates_to_deals,.new-theme-add-modals #task_relates_to_deals,.new-theme-add-modals #task_relates_to_deals, .new-theme-add-modals #task_related_to{
+  padding: 6px 28px !important;
+}
+.new-theme-add-modals .modal-header i.icon-plus-sign{
+  margin-top:1px !important;
+  margin-left: 6px;
+}
+.new-theme-add-modals .contact-modal-envelope{
+   margin-right: 10px;
+  position: relative; 
+  margin-top: -25px;
+}
+.new-theme-add-modals  .import-icon{
+  margin-right: 10px
+}
+.new-theme-add-modals .fa-pencil{
+    display: inline-block;
+    vertical-align: middle;
+    padding-right: 7px !important;
+    font-size: 12px;
+}
+.new-theme-add-modals #showtoggle_show{
+  padding-top: 35px;
+}
+.new-theme-add-modals .modal-cbx-m-t{
+  padding-left: 0px !important;
+}
+
+.new-theme-add-modals  .icon-plus-sign:before{
+ content: "+" !important;
+}
+.new-theme-add-modals .import-icon{
+  color: #11a0f8 !important;
+  margin-left: 1px;
+}
+.new-theme-add-modals :not(.notaddon-imp).icon-plus-sign:before{
+  margin-right: 0px !important;
+}
+#tags_source_deal_modal .control-label{
+  padding-top: 0px;
+}
+#custom-field-deals .control-group.form-group{
+  margin-bottom: 10px;
+}
+.new-theme-add-modals .modal-cbx-m-t{
+  margin-top: 0px !important;
+}
+.ticket-modal-cancel{
+  vertical-align: middle;
+}
+.app-aside-folded .free-msg-subscribe-btn{
+  display: none !important;
+}
+/*.app-aside-fixed .free-msg-subscribe-btn{
+  display: block !important;
+}*/
+.app-aside-folded .free-plan-upgrade-msg-btn{
+  display: block !important;
+}
+.app-aside-folded .free_msg{
+  display: none !important;
+}
+.app-aside-dock .menu-subscribe{
+  display: none !important;
+}
+.menu-subscribe {
+  margin-top: 120px;
+}
+/*.app-aside-fixed .free-plan-upgrade-msg-btn{
+  display: none !important;
+}*/
+
+.free_plan_message{
+  display: table;
+}
+.app-aside-fixed .free-msg-subscribe-btn{
+  margin-left: 19px;
+}
+
+.free-msg-subscribe-btn{
+  line-height: 1.5;
+  padding:1px 45px;
+  font-size: 12px;
+}
+@media (min-width: 768px){
+.app-aside-folded:not(.app-aside-dock) .navi>ul>li>a span. {  
+     width:auto;    
+}
+}
+.menu-subscribe.marketing-subscribe{
+  margin-top: 15px !important
+}
+.grid-menu-active{
+    color: #337ab7 !important;
+    font-weight: 600 !important;
+}
+.grid-dropdown-menu {
+  border-radius: 4px !important;
+}
+ 
+ .dashboard-select .grid-dropdown-menu .grid2-sub-nav span{
+  display: table-cell !important;
+  float: left;
+}
+.dashboard-select .grid-dropdown-menu li a span{
+display: table-cell !important;
+}
+
+ /** end of modal **/
+
