--- a/agile-frontend/WebContent/flatfull/css/material-theme/css/agile-theme.css
+++ b/agile-frontend/WebContent/flatfull/css/material-theme/css/agile-theme.css
@@ -3288,7 +3288,6 @@ width: 169px !important;
     font-weight: bold;
 }
 
-
 .agile-theme-15 .tag-alpha{font-size: 13px;}
 
 
@@ -3451,7 +3450,7 @@ i.mce-ico, i.mce-caret, span.mce-txt{
     display: inherit !important;
 }
 
-/*.recent-view-background-color{
+/*
 .dashboard-select .dropdown-menu .grid2-sub-nav span{font-size: 11px; padding-right: 1px; padding-top: 5px; color: #78909c;}
 .dashboard-select .dropdown-menu .grid2-sub-nav span:hover{color: #11a0f8;}
 .dashboard-select .dropdown-menu li a{display: block;}
@@ -3463,7 +3462,6 @@ i.mce-ico, i.mce-caret, span.mce-txt{
     background-color: #f0f0f0 !important;
     border-radius: 50%;
     line-height: 33px;
-
 }*/
 
 .rectview-deal-icon{
@@ -3918,4 +3916,5 @@ margin-top:0px;
 
 .dashboard-select .grid-dropdown-menu.dropdown-menu li a span.grid-span-two{
   display: inline-block; !important;
+
 }
