--- a/agile-frontend/WebContent/flatfull/css/core/1-agilecrm.css
+++ b/agile-frontend/WebContent/flatfull/css/core/1-agilecrm.css
@@ -5506,6 +5506,7 @@ div#need_help_header a:hover {
 }
 .dashboard-select .dropdown-menu li a i {
     font-size: 22px;
+    margin-top:-2px;
 }
 .dashboard-select .dropdown-menu li a i {
     display: -webkit-box;
@@ -5586,11 +5587,11 @@ div#need_help_header a:hover {
 }
 .dashboard-select .dropdown-menu li a i {
     font-size: 22px;
-    margin-top: -5px;
-    margin-bottom: 25px;
+    /*margin-top: -12px;*/
+   /* margin-bottom: 25px;*/
 }
 .dashboard-select .dropdown-menu li a i.markeing-i{
-  margin-top: -19px;
+  margin-top: -2px;
 }
 .dashboard-select .dropdown-menu li a i{
   display: -webkit-box;
@@ -5781,5 +5782,14 @@ display: table-cell !important;
 .dashboard-select .dropdown-menu .grid2-sub-nav span:last-child p:last-child{
     display: none;
   }
- /** end of modal **/
+
+.grid-dropdown-menu>li>a{
+    white-space: normal !important;
+}
+
+.dashboard-select .dropdown-menu li a{
+
+ display: block !important; 
+}
+/** end of modal **/
 
