--- a/agile-frontend/WebContent/flatfull/css/material-theme/css/agile-theme.css
+++ b/agile-frontend/WebContent/flatfull/css/material-theme/css/agile-theme.css
@@ -3931,3 +3931,6 @@ margin-top:0px;
   .dashboard-select .dropdown-menu .grid2-sub-nav span:last-child p:last-child{
     display: none;
   }
+  .grid-dropdown-menu>li>a{
+    white-space: normal !important;
+}
