--- a/agile-frontend/WebContent/flatfull/css/core/1-agilecrm.css
+++ b/agile-frontend/WebContent/flatfull/css/core/1-agilecrm.css
@@ -5616,7 +5616,7 @@ div#need_help_header a:hover {
 }
 .dashboard-select .dropdown-menu .grid2-sub-nav span:hover {
     color: #337ab7;
-    font-weight: 600;
+    /*font-weight: 600;*/
 }
 
 .new-theme-add-modals .modal-cotent.ticket-modal-content,.new-theme-add-modals .modal-content{
@@ -5804,5 +5804,5 @@ display: table-cell !important;
 
 .dashboard-select .dropdown-menu .grid2-sub-nav span:hover {
     color: #337ab7;
-    font-weight: 600;
+    /*font-weight: 600;*/
 }
