remove bold on hover

--- a/agile-frontend/WebContent/flatfull/css/material-theme/css/agile-theme.css
+++ b/agile-frontend/WebContent/flatfull/css/material-theme/css/agile-theme.css
@@ -3942,5 +3942,5 @@ margin-top:0px;
 
 .dashboard-select .dropdown-menu .grid2-sub-nav span:hover {
     color: #11a0f8;
-    font-weight: 700 !important;
+   /* font-weight: 700 !important;*/
 }
