documents template button fixes

--- a/agile-frontend/WebContent/flatfull/css/material-theme/css/agile-theme.css
+++ b/agile-frontend/WebContent/flatfull/css/material-theme/css/agile-theme.css
@@ -3949,7 +3949,7 @@ margin-top:0px;
 #landingPageSettingForm #cnameSettingsFields .form-group label.input-group-addon {
     padding: 14px 10px;
 }
-#edocument-type-select-container #addDocumentTemplate .icon-plus-sign
+#edocument-type-select-container #addDocumentTemplate .icon-plus-sign,#documents-top-view .documentsTemplate #addDocumentTemplate i
 {
   margin-top:-5px;
 }
@@ -3957,3 +3957,20 @@ aside
 {
   margin:0px!important;
 }
+.add-btn-mobile.add-doc-template-btns #addDocumentTemplate
+{
+  margin-right:0px;
+}
+#documents-top-view .wrapper-md.agile-page-header.documentsTemplate
+{
+  padding-bottom:25px!important;
+}
+#documents-top-view .wrapper-md #prefs-tabs-content .panel
+{
+  background-color:#F4F8F9;
+}
+#documents-top-view .documentsTemplate #addDocumentTemplate i 
+{
+  margin-right:0px;
+}
+
