fatmenu username line height issue fixed

--- a/agile-frontend/WebContent/flatfull/css/core/migration.css
+++ b/agile-frontend/WebContent/flatfull/css/core/migration.css
@@ -2721,4 +2721,5 @@ padding-right:0px !important;
   top: 0px !important;
 
 }
+#fat-menu .dropdown-menu li a.username{line-height: 20px !important;}
 /*end custom css code*/
