email tab ui fixes in mac safari only

--- a/agile-frontend/WebContent/css/safari-only.css
+++ b/agile-frontend/WebContent/css/safari-only.css
@@ -36,3 +36,6 @@
 {
 	display:none!important;
 }
+
+.emailCreditInfo{display: inline-block !important;}
+.emailCreditInfo .emailCreditCol{width: 50%; position: relative !important;}
