INBOX 6th id merged

--- a/agile-frontend/WebContent/flatfull/css/core/1-agilecrm.css
+++ b/agile-frontend/WebContent/flatfull/css/core/1-agilecrm.css
@@ -5861,7 +5861,7 @@ display: table-cell !important;
 .note-editable p img {
   max-width: 100%;
 }
-/****inbox***/
+/****inbox-sales***/
 .img-circle-inbox
 {
   border: 1px solid !important ;
