nexmo thirdparty api for agile sms

--- a/agile-frontend/WebContent/flatfull/css/misc/agile-widgets.css
+++ b/agile-frontend/WebContent/flatfull/css/misc/agile-widgets.css
@@ -426,3 +426,18 @@ small {
 	zoom : 1;
 	opacity:0.3;
 }
+.SMS-nexmo_sms.active{
+	 opacity : 0.3;
+}
+.SMS-nexmo_sms.disable{
+	 zoom : 1;
+	opacity:0.3;
+}
+.SMS-nexmo_sms.active:hover{
+	opacity : 1;
+	zoom : 1.05;
+}
+.SMS-nexmo_sms.disable:hover{
+	zoom : 1;
+	opacity:0.3;
+}
