bulk select lineheight added in new theme
bulk select lineheight added in new theme

--- a/agile-frontend/WebContent/flatfull/css/material-theme/css/agile-theme.css
+++ b/agile-frontend/WebContent/flatfull/css/material-theme/css/agile-theme.css
@@ -3104,7 +3104,7 @@ table#deal-sources-table>tbody>tr:last-child{
 #contact-image-content .editicon span{margin-top: -2px !important;}
 .agile-theme-15 .isotope-item{margin-top: 7px;}
 .agile-theme-15 .company-details-mobile-view .caret{margin-top: -11px;}
-.agile-theme-15 div#tickets-bulk-select {height: 20px;}
+.agile-theme-15 div#tickets-bulk-select {line-height: 20px;}
 #tickets-container #custom-filters-container .save-as-filter-container
 {
   margin-top:10px;
