--- a/agile-frontend/WebContent/misc/formbuilder/assets/templates/snippet/formname.html
+++ b/agile-frontend/WebContent/misc/formbuilder/assets/templates/snippet/formname.html
@@ -8,7 +8,7 @@
 <input type="hidden" id="_agile_redirect_url" name="_agile_redirect_url" value="<%= agileredirecturl %>">
 <input type="hidden" id="_agile_confirmation_msg" name="_agile_confirmation_msg" value="<%= agileconfirmationmsg %>">
 <input type="hidden" id="_agile_form_id_tags" name="tags" value="<%= agileformidtag %>">
-<% if(window.location.search.startsWith("?form=")) %>
+<% if(window.location.search.indexOf("?form=") == 0) %>
 <input type="hidden" id="_agile_form_id" name="_agile_form_id" value="<%= window.location.search.substring(6) %>">
 <%  else  %>
      <input type="hidden" id="_agile_form_id" name="_agile_form_id" value="">
