deals tab data content issues fixes

--- a/agile-frontend/WebContent/flatfull/css/material-theme/css/agile-theme.css
+++ b/agile-frontend/WebContent/flatfull/css/material-theme/css/agile-theme.css
@@ -3947,3 +3947,6 @@ margin-top:0px;
 #landingPageSettingForm #cnameSettingsFields .form-group label.input-group-addon {
     padding: 14px 10px;
 }
+input#add_new_milestone {
+    background: #fff;
+}
