--- a/agile-frontend/WebContent/flatfull/css/core/migration.css
+++ b/agile-frontend/WebContent/flatfull/css/core/migration.css
@@ -2721,4 +2721,6 @@ padding-right:0px !important;
   top: 0px !important;
 
 }
+.milestones-table{table-layout: fixed;}
+.milestones-table tbody tr td{padding-right: 10px; padding-left: 10px;}
 /*end custom css code*/
