--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,19 +4,19 @@
         <div class="header_top">
           <div class="header_top_left">
             <ul class="top_nav">
-              <li><a href="index.html">Home</a></li>
+              <li><a href="/health">Home</a></li>
               <li><a href="#">About</a></li>
-              <li><a href="pages/contact.html">Contact</a></li>
+              <li><a href="/contact">Contact</a></li>
             </ul>
           </div>
           <div class="header_top_right">
-            <p>Friday, December 05, 2045</p>
+            <p>Friday, December 05, 2018</p>
           </div>
         </div>
       </div>
       <div class="col-lg-12 col-md-12 col-sm-12">
         <div class="header_bottom">
-          <div class="logo_area"><a href="index.html" class="logo"><img src="assets/images/logo.jpg" alt=""></a></div>
+          <div class="logo_area"><a href="/health" class="logo"><img src="assets/images/logo.jpg" alt=""></a></div>
           <div class="add_banner"><a href="#"><img src="assets/images/logo.jpg" alt=""></a></div>
         </div>  
       </div>
@@ -29,7 +29,7 @@
       </div>
       <div id="navbar" class="navbar-collapse collapse">
         <ul class="nav navbar-nav main_nav">
-          <li class="active"><a href="index.html"><span class="fa fa-home desktop-home"></span><span class="mobile-show">Home</span></a></li>
+          <li class="active"><a href="/health"><span class="fa fa-home desktop-home"></span><span class="mobile-show">Home</span></a></li>
           <li><a href="#">Technology</a></li>
           <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Mobile</a>
             <ul class="dropdown-menu" role="menu">
@@ -42,8 +42,7 @@
           </li>
           <li><a href="#">Laptops</a></li>
           <li><a href="#">Tablets</a></li>
-          <li><a href="pages/contact.html">Contact Us</a></li>
-          <li><a href="pages/404.html">404 Page</a></li>
+          <li><a href="/contact">Contact Us</a></li>
         </ul>
       </div>
     </nav>
