--- a/src/app/single-article/single-article.component.html
+++ b/src/app/single-article/single-article.component.html
@@ -1,10 +1,10 @@
 
-<!-- <div id="preloader">
+<div id="preloader">
         <div id="status">&nbsp;</div>
       </div>
 <a class="scrollToTop" href="#"><i class="fa fa-angle-up"></i></a>
 <div class="container">
-<app-header></app-header> -->
+<app-header></app-header>
 <section id="contentSection">
         <div class="row">
 <div *ngIf="link === '/article/1'">
@@ -13,11 +13,11 @@
 <div *ngIf="link === '/article/2'">
         <h2>This is h3 title</h2>
 </div>
-<!-- 
-<app-right-panel></app-right-panel> -->
+
+<app-right-panel></app-right-panel>
 </div>
 </section>
 
-<!-- <app-footer></app-footer>
+<app-footer></app-footer>
 
-</div> -->
+</div>
