modified content of each article view , added new component related-post

--- a/src/app/health-hacks/health-hacks.component.html
+++ b/src/app/health-hacks/health-hacks.component.html
@@ -95,7 +95,7 @@
               <ul class="business_catgnav  wow fadeInDown">
                 <li>
                   <figure class="bsbig_fig">  <a [routerLink]="['/article',1]" class="featured_img"> 
-                    <img alt="" src="assets/images/featured_img1.jpg"> <span class="overlay"></span> </a>
+                    <img alt="" src="/assets/images/featured_img1.jpg"> <span class="overlay"></span> </a>
                     <figcaption> <a [routerLink]="['/article',1]" > Business </a> </figcaption>
                     <p>Nunc tincidunt, elit non cursus euismod, lacus augue ornare metus, egestas imperdiet nulla nisl quis mauris. Suspendisse a phare...</p>
                   </figure>
@@ -106,9 +106,9 @@
               <ul class="spost_nav">
                 <li>
                   <div class="media wow fadeInDown"> 
-                    <a href="pages/single_page.html" class="media-left">
-                     <img alt="" src="assets/images/post_img1.jpg"> </a>
-                    <div class="media-body"> <a href="pages/single_page.html" class="catg_title"> Aliquam malesuada diam eget turpis varius 1</a> </div>
+                    <a [routerLink]="['/article',2]" class="media-left">
+                     <img alt="" src="/assets/images/post_img1.jpg"> </a>
+                    <div class="media-body"> <a [routerLink]="['/article',2]" class="catg_title"> Aliquam malesuada diam eget turpis varius 1</a> </div>
                   </div>
                 </li>
                 <li>
