--- a/src/app/single-article/single-article.component.html
+++ b/src/app/single-article/single-article.component.html
@@ -8,13 +8,49 @@
 <section id="contentSection">
         <div class="row">
 <div *ngIf="link === '/article/1'">
-        <h2>This is h2 title</h2>
+        <h2>This is article one</h2>
+        <div class="col-lg-8 col-md-8 col-sm-8">
+                <div class="left_content">
+                  <div class="single_page">
+                    <ol class="breadcrumb">
+                      <li><a href="/health">Home</a></li>
+                      <li><a href="#">Technology</a></li>
+                      <li class="active">Mobile</li>
+                    </ol>
+                    <h1>Morbi dapibus, enim quis luctus interdum</h1>
+                    <div class="post_commentbox"> <a href="#"><i class="fa fa-user"></i>Wpfreeware</a> <span><i class="fa fa-calendar"></i>6:49 AM</span> <a href="#"><i class="fa fa-tags"></i>Technology</a> </div>
+                    <div class="single_page_content"> <img class="img-center" src="/assets/images/single_post_img.jpg" alt="">
+                      <p>Nunc tincidunt, elit non cursus euismod, lacus augue ornare metus, egestas imperdiet nulla nisl quis mauris. Suspendisse a pharetra urna. Morbi dui lectus, pharetra nec elementum eget, vulputate ut nisi. Aliquam accumsan, nulla sed feugiat vehicula, lacus justo semper libero, quis porttitor turpis odio sit amet ligula. Duis dapibus fermentum orci, nec malesuada libero vehicula ut. Integer sodales, urna eget interdum eleifend, nulla nibh laoreet nisl, quis dignissim mauris dolor eget mi. Donec at mauris enim. Duis nisi tellus, adipiscing a convallis quis, tristique vitae risus. Nullam molestie gravida lobortis. Proin ut nibh quis felis auctor ornare. Cras ultricies, nibh at mollis faucibus, justo eros porttitor mi, quis auctor lectus arcu sit amet nunc. Vivamus gravida vehicula arcu, vitae vulputate augue lacinia faucibus.</p>
+                      <blockquote> Donec volutpat nibh sit amet libero ornare non laoreet arcu luctus. Donec id arcu quis mauris euismod placerat sit amet ut metus. Sed imperdiet fringilla sem eget euismod. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Pellentesque adipiscing, neque ut pulvinar tincidunt, est sem euismod odio, eu ullamcorper turpis nisl sit amet velit. Nullam vitae nibh odio, non scelerisque nibh. Vestibulum ut est augue, in varius purus. </blockquote>
+                      <ul>
+                        <li>Nullam vitae nibh odio, non scelerisque nibh</li>
+                        <li>Nullam vitae nibh odio, non scelerisque nibh</li>
+                        <li>Nullam vitae nibh odio, non scelerisque nibh</li>
+                        <li>Nullam vitae nibh odio, non scelerisque nibh</li>
+                        <li>Nullam vitae nibh odio, non scelerisque nibh</li>
+                        <li>Nullam vitae nibh odio, non scelerisque nibh</li>
+                      </ul>
+                      </div>
+                  </div>
+                </div>
+              </div>
+              <nav class="nav-slit"> <a class="prev" href="#"> <span class="icon-wrap"><i class="fa fa-angle-left"></i></span>
+                <div>
+                  <h3>City Lights</h3>
+                  <img src="/assets/images/post_img1.jpg" alt=""/> </div>
+                </a> <a class="next" href="#"> <span class="icon-wrap"><i class="fa fa-angle-right"></i></span>
+                <div>
+                  <h3>Street Hills</h3>
+                  <img src="/assets/images/post_img1.jpg" alt=""/>
+                 </div>
+                </a> </nav>
 </div>
 <div *ngIf="link === '/article/2'">
-        <h2>This is h3 title</h2>
+        <h2>This is article two</h2>
 </div>
-
 <app-right-panel></app-right-panel>
+
+<app-related-posts></app-related-posts>
 </div>
 </section>
 
