added component for latest post and made changes to jquery plugin

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,12 +1,8 @@
 /*
-Template Name: NewsFeed
-Template URI: http://www.wpfreeware.com/newsfeed-ultra-responsive-news-magazine-theme/
-Author: WpFreeware
-Author URI: http://www.wpfreeware.com
-Description: A Pro bootstrap html5 css3 responsive news magazine website template
-Version: 1.0 
-License: GPL
-License URI: http://www.gnu.org/licenses/gpl-2.0.html
+Template Name: gyno
+
+Author: poulami
+
 */
 
 body{background:#f5f5f5}
@@ -118,8 +114,9 @@ img:hover{opacity:0.75}
 .latest_post{float:left; display:inline; width:100%}
 .latest_post > h2{background:none repeat scroll 0 0 #151515; color:#fff; font-family:'Oswald',sans-serif; font-size:18px; margin-top:5px; font-weight:400; margin-bottom:10px; margin-left:0; padding:0; position:relative; text-align:center; text-transform:uppercase}
 .latest_post > h2 span{padding:4px 10px}
-.latest_postnav{height:auto !important; margin-top:20px;}
-.latest_postnav li{margin-bottom:10px; float:left; width:100%}
+.latest_postnav{margin-top:10px;width: 100%;
+    overflow: hidden;}
+.latest_postnav li{margin-bottom:10px; float:left; width:100%;display: inline-block;}
 .latest_post_container{display:inline; float:left; height:430px; position:relative; width:100%}
 .latest_post_container:hover #prev-button, .latest_post_container:hover #next-button{display:block}
 #prev-button{cursor:pointer; font-size:20px; left:0; position:absolute; text-align:center; top:-10px; width:100%; display:none}
