--- a/src/app/health-hacks/health-hacks.component.html
+++ b/src/app/health-hacks/health-hacks.component.html
@@ -47,7 +47,7 @@
           </div>
         </div>
       </div>
-      <div class="col-lg-4 col-md-4 col-sm-4">
+      <!-- <div class="col-lg-4 col-md-4 col-sm-4">
         <div class="latest_post">
           <h2><span>Latest post</span></h2>
           <div class="latest_post_container">
@@ -82,7 +82,8 @@
             <div id="next-button"><i class="fa  fa-chevron-down"></i></div>
           </div>
         </div>
-      </div>
+      </div> -->
+      <app-latest-post></app-latest-post>
     </div>
   </section>
   <section id="contentSection">
